--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@types/node": "^20.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "firebase-admin": "^11.10.1"
+    "firebase-admin": "^11.10.1",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
